fix spacing in html, horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@ body {
 	background: #fff;
 	font-family: 'Raleway', sans-serif;
 }
-
 /* add header section styles */
 
 hr {
@@ -12,20 +11,17 @@ hr {
 	border: 2px #333 solid;
 	margin: 0.5% auto;
 }
-
 #developer-name {
 	color: #662EAB;
 	font-weight: 200;
 	font-size: 3rem;
 	margin-bottom: 0px;
 }
-
 #developer-title {
 	font-weight: 500;
 	color: #662EAB;
 	font-size: 1.2rem;
 }
-
 /* header section ends here */
 
 /* add featured work section styles */
@@ -34,44 +30,38 @@ hr {
 	text-align: center;
 	border: none;
 }
-
 .section-title {
 	color: #38007E;
 	padding: 4% 1% 0px;
 	font-weight: 300;
 }
-
 .card-title {
 	color: #333;
 	text-transform: uppercase;
 	font-size: 1.5rem;
-	font-weight:500;
+	font-weight: 500;
 }
-
 .card-body .card-link {
 	color: #662EAB;
 	font-weight: 200;
 }
-
 /* featured work ends here */
 
 /* add footer styles */
 
 #footer {
 	background: #440099;
-	padding: 5% 0%;
-	margin-top: 8%;
+	padding-top: 8%;
+	padding-bottom: 4%;
 	color: #fff;
 	font-weight: 200;
 	text-align: center;
 }
-
 #footer .social-link {
 	color: #fff;
 	padding: 1%;
 	font-size: 1rem;
 }
-
 /* footer style ends here */
 
 /*
@@ -80,100 +70,81 @@ hr {
 */
 
 /* Small devices (landscape phones, 576px and up) */
+
 @media (min-width: 320px) {
 	#developer-name {
 		font-size: 2rem;
 		text-align: center;
 		margin: 3% auto;
 	}
-
 	#logo {
 		margin: auto;
 		display: block;
 	}
-
 	#developer-title {
 		text-align: center;
 		font-size: 0.8rem;
 	}
-
 	.section-title {
 		font-size: 1.6rem;
 		padding: 6% 2% 0px;
 	}
-
 	.card-title {
 		font-size: 1.2rem;
 	}
-
 }
-
 /* Medium devices (tablets, 768px and up) */
+
 @media (min-width: 768px) {
 	#developer-name {
 		font-size: 2.4rem;
 		text-align: right;
 		margin: 0px;
 	}
-
 	#developer-title {
 		text-align: right;
 		font-size: 1rem;
 	}
-
 	#logo {
 		display: inline;
 	}
-
 	.section-title {
 		font-size: 1.8rem;
 		padding: 6% 2% 0px;
 	}
-
 	.card-title {
 		font-size: 1.2rem;
 	}
-
 }
-
 /* Large devices (desktops, 992px and up) */
+
 @media (min-width: 992px) {
 	#developer-name {
 		font-size: 2.6rem;
 		margin: 0px;
 	}
-
 	#developer-title {
 		font-size: 1.2rem;
 	}
-
 	.section-title {
 		font-size: 2rem;
 		padding: 4% 1% 0px;
 	}
-
 	.card-title {
 		font-size: 1.4rem;
 	}
-
 }
-
 /* Extra large devices (large desktops, 1200px and up) */
+
 @media (min-width: 1200px) {
 	#developer-name {
 		font-size: 3rem;
 		margin: 0px;
 	}
-
 	#developer-title {
 		font-size: 1.2rem;
 	}
-
 	.card-title {
 		font-size: 1.5rem;
 	}
 }
-
-
-
-
